--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,3 +16,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+input:focus, textarea:focus, select:focus {
+  outline: none !important;
+  box-shadow: none !important;
+  border-color: #e5dc3b !important; /* gray-600 */
+}
